src/errors.txt
c++ -Wall -std=c++14   -c -o lexer.o lexer.cpp
lexer.cpp: In function ‘int yy_get_next_buffer()’:
lexer.cpp:1559:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  if ((int) ((yy_n_chars) + number_to_move) > YY_CURRENT_BUFFER_LVALUE->yy_buf_size) {
                                            ^
lexer.cpp: At global scope:
lexer.cpp:1635:17: warning: ‘void yyunput(int, char*)’ defined but not used [-Wunused-function]
     static void yyunput (int c, char * yy_bp )
                 ^
c++ -Wall -std=c++14   -c -o parser.o parser.cpp
In file included from parser.ypp:4:0:
ast.hpp:278:3: error: ‘Ast’ does not name a type
   Ast *body;
   ^
ast.hpp: In constructor ‘Local::Local(Header*, Block*)’:
ast.hpp:281:58: error: class ‘Local’ does not have any field named ‘body’
   Local(Header *h, Block *b) : local_type(1), header(h), body(b) {}
                                                          ^
ast.hpp: In destructor ‘virtual Local::~Local()’:
ast.hpp:293:14: error: ‘body’ was not declared in this scope
       delete body;
              ^
ast.hpp: In member function ‘virtual void Local::printOn(std::ostream&) const’:
ast.hpp:308:33: error: ‘body’ was not declared in this scope
       out << *header << " " << *body << " ";
                                 ^
ast.hpp: In member function ‘virtual void Local::sem()’:
ast.hpp:332:9: error: ‘body’ was not declared in this scope
         body->sem();
         ^
parser.cpp: At global scope:
parser.cpp:1228:9: error: use of deleted function ‘YYSTYPE::YYSTYPE()’
 YYSTYPE yylval;
         ^
parser.cpp:162:7: note: ‘YYSTYPE::YYSTYPE()’ is implicitly deleted because the default definition would be ill-formed:
 union YYSTYPE
       ^
parser.ypp:78:19: error: union member ‘YYSTYPE::var_name_type_list’ with non-trivial ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Id*; _Alloc = std::allocator<Id*>]’
  std::vector<Id*> var_name_type_list;
                   ^
parser.ypp:79:23: error: union member ‘YYSTYPE::formal_list’ with non-trivial ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Formal*; _Alloc = std::allocator<Formal*>]’
  std::vector<Formal*> formal_list;
                       ^
parser.ypp:80:21: error: union member ‘YYSTYPE::expr_list’ with non-trivial ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Expr*; _Alloc = std::allocator<Expr*>]’
  std::vector<Expr*> expr_list;
                     ^
parser.cpp: In function ‘int yyparse()’:
parser.cpp:1257:30: error: use of deleted function ‘YYSTYPE::YYSTYPE()’
     YYSTYPE yyvsa[YYINITDEPTH];
                              ^
parser.cpp:1257:30: error: use of deleted function ‘YYSTYPE::~YYSTYPE()’
parser.cpp:162:7: note: ‘YYSTYPE::~YYSTYPE()’ is implicitly deleted because the default definition would be ill-formed:
 union YYSTYPE
       ^
parser.ypp:78:19: error: union member ‘YYSTYPE::var_name_type_list’ with non-trivial ‘std::vector<_Tp, _Alloc>::~vector() [with _Tp = Id*; _Alloc = std::allocator<Id*>]’
  std::vector<Id*> var_name_type_list;
                   ^
parser.ypp:79:23: error: union member ‘YYSTYPE::formal_list’ with non-trivial ‘std::vector<_Tp, _Alloc>::~vector() [with _Tp = Formal*; _Alloc = std::allocator<Formal*>]’
  std::vector<Formal*> formal_list;
                       ^
parser.ypp:80:21: error: union member ‘YYSTYPE::expr_list’ with non-trivial ‘std::vector<_Tp, _Alloc>::~vector() [with _Tp = Expr*; _Alloc = std::allocator<Expr*>]’
  std::vector<Expr*> expr_list;
                     ^
parser.cpp:1257:30: error: use of deleted function ‘YYSTYPE::~YYSTYPE()’
     YYSTYPE yyvsa[YYINITDEPTH];
                              ^
parser.cpp:1269:11: error: use of deleted function ‘YYSTYPE::YYSTYPE()’
   YYSTYPE yyval;
           ^
parser.cpp:1269:11: error: use of deleted function ‘YYSTYPE::~YYSTYPE()’
parser.cpp:1435:12: error: use of deleted function ‘YYSTYPE& YYSTYPE::operator=(const YYSTYPE&)’
   *++yyvsp = yylval;
            ^
parser.cpp:162:7: note: ‘YYSTYPE& YYSTYPE::operator=(const YYSTYPE&)’ is implicitly deleted because the default definition would be ill-formed:
 union YYSTYPE
       ^
parser.ypp:78:19: error: union member ‘YYSTYPE::var_name_type_list’ with non-trivial ‘std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = Id*; _Alloc = std::allocator<Id*>]’
  std::vector<Id*> var_name_type_list;
                   ^
parser.ypp:79:23: error: union member ‘YYSTYPE::formal_list’ with non-trivial ‘std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = Formal*; _Alloc = std::allocator<Formal*>]’
  std::vector<Formal*> formal_list;
                       ^
parser.ypp:80:21: error: union member ‘YYSTYPE::expr_list’ with non-trivial ‘std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = Expr*; _Alloc = std::allocator<Expr*>]’
  std::vector<Expr*> expr_list;
                     ^
parser.cpp:1466:9: error: use of deleted function ‘YYSTYPE& YYSTYPE::operator=(const YYSTYPE&)’
   yyval = yyvsp[1-yylen];
         ^
parser.cpp:2006:12: error: use of deleted function ‘YYSTYPE& YYSTYPE::operator=(const YYSTYPE&)’
   *++yyvsp = yyval;
            ^
parser.cpp:2150:12: error: use of deleted function ‘YYSTYPE& YYSTYPE::operator=(const YYSTYPE&)’
   *++yyvsp = yylval;
            ^
parser.cpp: In function ‘void __static_initialization_and_destruction_0(int, int)’:
parser.cpp:1228:9: error: use of deleted function ‘YYSTYPE::~YYSTYPE()’
 YYSTYPE yylval;
         ^
<builtin>: recipe for target 'parser.o' failed
make: *** [parser.o] Error 1
